# sadby

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs
src/: default_impls.rs  lib.rs
src/default_impls/: uuid.rs
