[package]
name = "sadby"
description = "SeriAlize Deserialize BYtes"
authors = ["FlekGeKei"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"

[dependencies]
sadby_macro = { path = "./macro" }
uuid = { version = "^1.10.0", optional = true }

[features]
default = []
uuid = ["dep:uuid"]
